--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ sourceCompatibility = 1.8
 repositories {
     jcenter()
     maven { url "http://kotlin.bintray.com/ktor" }
+    maven { url  "https://dl.bintray.com/kotlin/exposed" }
     mavenCentral()
 }
 
@@ -29,6 +30,8 @@ dependencies {
     compile "io.ktor:ktor-server-core:$ktor_version"
     compile "io.ktor:ktor-server-netty:$ktor_version"
     compile "io.ktor:ktor-gson:$ktor_version"
+    compile "org.jetbrains.exposed:exposed:0.10.4"
+    compile "org.postgresql:postgresql:42.2.2.jre6"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
